# telemetry-desktop

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.new.h  mainwindow.newcpp.cpp  mainwindow.ui
